clean up the streamer info retrieval.
