# crestdb-web/src/gen/java/hep/crest/server/swagger/api/PayloadsApiService.java
@@ -20,5 +20,9 @@ public abstract class PayloadsApiService {
     public abstract Response getPayloadMetaInfo(String hash,SecurityContext securityContext, UriInfo info) throws NotFoundException;
     public abstract Response uploadPayloadBatchWithIovMultiForm(List<FormDataBodyPart> filesbodyparts, FormDataContentDisposition filesDetail, String tag, FormDataBodyPart iovsetupload, String xCrestPayloadFormat,BigDecimal endtime,SecurityContext securityContext, UriInfo info) throws NotFoundException;
     public abstract Response storePayloadBatchWithIovMultiForm(String tag, FormDataBodyPart iovsetupload, String xCrestPayloadFormat,BigDecimal endtime,SecurityContext securityContext, UriInfo info) throws NotFoundException;
-    public abstract Response storePayloadWithIovMultiForm(InputStream fileInputStream, FormDataContentDisposition fileDetail,String tag,BigDecimal since,String xCrestPayloadFormat,BigDecimal endtime,SecurityContext securityContext, UriInfo info) throws NotFoundException;
+    public abstract Response storePayloadWithIovMultiForm(InputStream fileInputStream,
+                                                          FormDataContentDisposition fileDetail,String tag,
+                                                          BigDecimal since,String xCrestPayloadFormat,
+                                                          String objectType, String version, BigDecimal endtime,
+                                                          SecurityContext securityContext, UriInfo info) throws NotFoundException;
 }
